# softlab_parser

./: .gitignore  CMakeLists.txt  exception.cpp  exception.h  input.txt  main.cpp  parser.cpp
src/: exception.cpp  exceptions.cpp  exceptions.h  id_generator.cpp  id_generator.h  main.cpp  parser.cpp  parser.h  utils.cpp  utils.h
test/: error_extra_closing.in  error_extra_closing_log.exp  error_no_assignment.in  error_no_assignment_log.exp  error_no_closing.in  error_no_closing_log.exp  error_no_input_file_log.exp  error_no_node_name.in  error_no_node_name_log.exp  error_not_closed_qstr.in  error_not_closed_qstr_log.exp  error_not_qstr.in  error_not_qstr_log.exp  error_not_qualifier.in  error_not_qualifier_log.exp  input.txt  ok_big.exp  ok_big.in  ok_model.exp  ok_qualifier.exp  ok_qualifier.in  run_tests.cmd
